--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "version": "0.0.0",
-  "name": "@dcl/schemas",
+  "name": "@tcl/schemas",
   "main": "./dist/index.js",
   "typings": "./dist/index.d.ts",
   "license": "Apache-2.0",
