add moonchain and binance

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,7 +1,7 @@
 # https://docs.github.com/en/github/creating-cloning-and-archiving-repositories/about-code-owners
 
-src/report/* @decentraland/core-developers
+src/report/* @telestoworld/core-developers
 
 # team-specific types and schemas
 
-src/dapps/* @decentraland/dapps
+src/dapps/* @telestoworld/dapps
